--- a/index.html
+++ b/index.html
@@ -1,165 +1,214 @@
-# TERMOS DE SERVIÇO – TendBranding_WHA
-
-**Última atualização:** 25 de Outubro de 2023 
-
-Bem-vindo(a) ao **TendBranding_WHA** (o "Aplicativo" ou "Serviço"), uma ferramenta demonstrativa desenvolvida pela **Tend Branding**, projetada para integrar-se com plataformas da Meta e facilitar o envio de mensagens para contatos listados em uma planilha fornecida por você, o usuário ("Usuário" ou "Você").
-
-Ao utilizar nosso Aplicativo, Você concorda em cumprir e estar vinculado aos seguintes Termos de Serviço. Por favor, leia-os atentamente. Se Você não concordar com estes Termos, não deverá utilizar o Aplicativo.
-
----
-
-### 1. Descrição do Serviço e Natureza Demonstrativa
-
-O Aplicativo é uma ferramenta em fase de demonstração, cujo objetivo é demonstrar funcionalidades de envio de mensagens programadas ou em massa para uma lista de contatos importada de uma planilha.
-
-**Por ser uma versão demonstrativa:**
-
-*   O Aplicativo é fornecido "COMO ESTÁ" e "CONFORME DISPONÍVEL", sem garantias de qualquer tipo, expressas ou implícitas.
-*   Funcionalidades podem ser limitadas, instáveis ou alteradas sem aviso prévio.
-*   O suporte pode ser limitado aos canais indicados na Seção 12.
-
----
-
-### 2. Elegibilidade e Aceitação
-
-Ao usar o Aplicativo, Você declara e garante que tem pelo menos **18 anos de idade** e possui plenos poderes e autoridade para aceitar estes Termos.
-
----
-
-### 3. Obrigações do Usuário
-
-#### 3.1 Consentimento dos Destinatários:
-
-Para garantir a conformidade com as leis de proteção de dados (LGPD, GDPR) e as políticas da Meta, o usuário deverá:
-
-*   **Obter o Consentimento Prévio:**
-    *   Antes de enviar qualquer mensagem, o usuário deve obter o consentimento **explícito, claro e verificável** dos destinatários.
-    *   O consentimento deve incluir:
-        *   Identificação clara do remetente (nome da empresa e finalidade do contato);
-        *   Descrição das mensagens que serão enviadas;
-        *   Opção para cancelamento do envio a qualquer momento (opt-out).
-
-*   **Exemplo de Consentimento Recomendado:**
-    *   _"Olá, \[Nome do Contato]. Estamos entrando em contato em nome da Tend Branding para oferecer conteúdos relacionados a \[Descrição do Serviço]. Caso você concorde em receber nossas mensagens via WhatsApp, por favor, responda com 'Aceito'. Você poderá cancelar o recebimento a qualquer momento enviando a palavra 'Cancelar'."_
-
-*   **Armazenamento do Consentimento:**
-    *   O usuário é responsável por manter um registro do consentimento obtido, incluindo a data, horário e o conteúdo da mensagem de aceitação. Esse registro poderá ser solicitado em caso de auditoria ou denúncia.
-
----
-
-#### 3.2 Responsabilidade pela Lista de Contatos:
-
-*   O usuário é **exclusivamente responsável** pela origem, legalidade e veracidade dos dados dos contatos fornecidos.
-*   É **estritamente proibido** utilizar listas de contatos adquiridas de terceiros ou coletadas sem consentimento explícito.
-*   Em caso de violação das leis de proteção de dados ou das políticas da Meta, o usuário poderá ser responsabilizado civil e criminalmente.
-
----
-
-#### 3.3 Conteúdo das Mensagens:
-
-*   O usuário é o único responsável pelo conteúdo enviado e concorda em não enviar mensagens que sejam:
-    *   Spam ou mensagens não solicitadas;
-    *   Ilegais, abusivas, ameaçadoras ou difamatórias;
-    *   Que infrinjam direitos de propriedade intelectual;
-    *   Que contenham vírus, malware ou códigos maliciosos.
-
----
-
-### 4. Privacidade e Proteção de Dados
-
-#### 4.1 Armazenamento de Dados da Planilha:
-
-*   Os dados fornecidos pelo usuário são armazenados temporariamente pelo período máximo de **15 (quinze) dias**, exclusivamente para fins de demonstração.
-*   Após esse período, os dados são excluídos de forma automática, permanente e irreversível.
-
-#### 4.2 Solicitação de Exclusão Antecipada:
-
-*   O usuário poderá solicitar a exclusão antecipada dos dados enviando um e-mail para [tendbranding@gmail.com](mailto:tendbranding@gmail.com).
-*   A solicitação será atendida em até **24 horas** após o recebimento do e-mail.
-*   A solicitação deverá incluir:
-    *   Nome completo do usuário;
-    *   Endereço de e-mail utilizado no cadastro;
-    *   Data e hora do envio da planilha;
-    *   Descrição dos dados a serem excluídos.
-
----
-
-### 5. Propriedade Intelectual
-
-O Aplicativo, incluindo design, software, código-fonte e marcas registradas, é propriedade da **Tend Branding** ou de seus licenciadores.
-
-*   É proibido:
-    *   Realizar engenharia reversa, descompilar ou modificar o código-fonte;
-    *   Redistribuir ou comercializar o aplicativo sem autorização prévia;
-    *   Utilizar o nome, marca ou logotipo da Tend Branding sem permissão expressa.
-
----
-
-### 6. Isenção de Garantias e Limitação de Responsabilidade
-
-*   O Aplicativo é fornecido "COMO ESTÁ". Não garantimos que o Aplicativo será ininterrupto, livre de erros ou seguro.
-*   A **Tend Branding** não se responsabiliza por perdas ou danos decorrentes do uso do Aplicativo.
-*   A **Meta** não é responsável pelo funcionamento deste Aplicativo e não o endossa.
-
----
-
-### 7. Consequências do Uso Indevido
-
-*   O uso inadequado do Aplicativo poderá resultar em:
-    *   Suspensão ou bloqueio do acesso ao Aplicativo;
-    *   Sanções ou restrições pela **Meta**, incluindo o bloqueio da conta WhatsApp Business;
-    *   Responsabilização legal por práticas abusivas, envio de mensagens não autorizadas ou coleta indevida de dados.
-
----
-
-### 8. Indenização
-
-O usuário concorda em indenizar a **Tend Branding** por quaisquer perdas, danos ou custos decorrentes de:
-
-*   Uso inadequado do Aplicativo;
-*   Violação destes Termos;
-*   Violações das políticas da Meta ou das leis aplicáveis.
-
----
-
-### 9. Rescisão
-
-A **Tend Branding** reserva-se o direito de suspender ou encerrar o acesso ao Aplicativo a qualquer momento, sem aviso prévio, em caso de violação destes Termos.
-
----
-
-### 10. Modificações nos Termos
-
-Os Termos poderão ser modificados a qualquer momento. Notificaremos o usuário via e-mail ou pela URL onde os Termos estão hospedados. A continuação do uso do Aplicativo após as revisões constituirá aceitação dos novos termos.
-
----
-
-### 11. Lei Aplicável e Jurisdição
-
-Estes Termos serão regidos pelas leis da **República Federativa do Brasil**.
-
-*   O foro eleito para a resolução de disputas é a comarca de **Campo Grande, Mato Grosso do Sul**, com renúncia expressa a qualquer outro foro.
-
----
-
-### 12. Contato de Suporte
-
-Em caso de dúvidas ou solicitações:
-
-*   E-mail: [raphaelbarbaguerrero@gmail.com](mailto:raphaelbarbaguerrero@gmail.com) ou [tendbranding@gmail.com](mailto:tendbranding@gmail.com)
-
----
-
-### Links para as Políticas da Meta:
-
-*   [Política do WhatsApp Business](https://www.whatsapp.com/legal/business-policy)
-*   [Termos da Plataforma Meta](https://developers.facebook.com/terms/)
-*   [Política de Comércio da Meta](https://www.facebook.com/policies/commerce)
-
----
-
-### Aviso Importante:
-
-O uso do TendBranding_WHA em desacordo com as políticas da Meta poderá resultar em bloqueio da conta, suspensão do acesso à API ou ações legais.
-
-*   É responsabilidade do usuário garantir o **consentimento explícito** dos destinatários e seguir rigorosamente as políticas da Meta e a legislação aplicável.
+<!DOCTYPE html>
+<html lang="pt-br">
+<head>
+    <meta charset="UTF-8">
+    <meta name="viewport" content="width=device-width, initial-scale=1.0">
+    <title>Termos de Serviço – TendBranding_WHA</title>
+    <style>
+        body { font-family: -apple-system, BlinkMacSystemFont, "Segoe UI", Roboto, Helvetica, Arial, sans-serif, "Apple Color Emoji", "Segoe UI Emoji", "Segoe UI Symbol"; line-height: 1.6; margin: 0; padding: 0; background-color: #f4f4f4; color: #333; }
+        .container { max-width: 800px; margin: 20px auto; padding: 25px; background-color: #fff; border-radius: 8px; box-shadow: 0 2px 10px rgba(0,0,0,0.1); }
+        h1 { color: #2c3e50; text-align: center; margin-bottom: 10px; font-size: 1.8em;}
+        h2 { color: #34495e; margin-top: 30px; margin-bottom: 15px; border-bottom: 1px solid #ecf0f1; padding-bottom: 5px; font-size: 1.5em;}
+        h3 { color: #7f8c8d; margin-top: 20px; margin-bottom: 10px; font-size: 1.2em;}
+        h4 { color: #95a5a6; margin-top: 15px; margin-bottom: 8px; font-size: 1.1em;}
+        p, li { margin-bottom: 10px; text-align: justify; }
+        ul { padding-left: 20px; }
+        strong { color: #2c3e50; }
+        em { font-style: italic; }
+        a { color: #3498db; text-decoration: none; }
+        a:hover { text-decoration: underline; }
+        .last-updated { text-align: center; font-style: italic; color: #7f8c8d; margin-bottom: 25px; font-size: 0.9em; }
+        hr { border: 0; height: 1px; background-color: #ecf0f1; margin: 30px 0; }
+        .warning { background-color: #fffbe6; border-left: 4px solid #f1c40f; padding: 10px 15px; margin-top: 15px; }
+    </style>
+</head>
+<body>
+    <div class="container">
+        <h1>TERMOS DE SERVIÇO – TendBranding_WHA</h1>
+
+        <p class="last-updated"><strong>Última atualização:</strong> 25 de Outubro de 2023 <!-- SUBSTITUA PELA DATA CORRETA --></p>
+
+        <p>Bem-vindo(a) ao <strong>TendBranding_WHA</strong> (o "Aplicativo" ou "Serviço"), uma ferramenta demonstrativa desenvolvida pela <strong>Tend Branding</strong>, projetada para integrar-se com plataformas da Meta e facilitar o envio de mensagens para contatos listados em uma planilha fornecida por você, o usuário ("Usuário" ou "Você").</p>
+
+        <p>Ao utilizar nosso Aplicativo, Você concorda em cumprir e estar vinculado aos seguintes Termos de Serviço. Por favor, leia-os atentamente. Se Você não concordar com estes Termos, não deverá utilizar o Aplicativo.</p>
+
+        <hr>
+
+        <h2>1. Descrição do Serviço e Natureza Demonstrativa</h2>
+        <p>O Aplicativo é uma ferramenta em fase de demonstração, cujo objetivo é demonstrar funcionalidades de envio de mensagens programadas ou em massa para uma lista de contatos importada de uma planilha.</p>
+        <p><strong>Por ser uma versão demonstrativa:</strong></p>
+        <ul>
+            <li>O Aplicativo é fornecido "COMO ESTÁ" e "CONFORME DISPONÍVEL", sem garantias de qualquer tipo, expressas ou implícitas.</li>
+            <li>Funcionalidades podem ser limitadas, instáveis ou alteradas sem aviso prévio.</li>
+            <li>O suporte pode ser limitado aos canais indicados na Seção 12.</li>
+        </ul>
+
+        <hr>
+
+        <h2>2. Elegibilidade e Aceitação</h2>
+        <p>Ao usar o Aplicativo, Você declara e garante que tem pelo menos <strong>18 anos de idade</strong> e possui plenos poderes e autoridade para aceitar estes Termos.</p>
+
+        <hr>
+
+        <h2>3. Obrigações do Usuário</h2>
+
+        <h4>3.1 Consentimento dos Destinatários:</h4>
+        <p>Para garantir a conformidade com as leis de proteção de dados (LGPD, GDPR) e as políticas da Meta, o usuário deverá:</p>
+        <ul>
+            <li><strong>Obter o Consentimento Prévio:</strong>
+                <ul>
+                    <li>Antes de enviar qualquer mensagem, o usuário deve obter o consentimento <strong>explícito, claro e verificável</strong> dos destinatários.</li>
+                    <li>O consentimento deve incluir:
+                        <ul>
+                            <li>Identificação clara do remetente (nome da empresa e finalidade do contato);</li>
+                            <li>Descrição das mensagens que serão enviadas;</li>
+                            <li>Opção para cancelamento do envio a qualquer momento (opt-out).</li>
+                        </ul>
+                    </li>
+                </ul>
+            </li>
+            <li><strong>Exemplo de Consentimento Recomendado:</strong>
+                <ul>
+                    <li><em>"Olá, [Nome do Contato]. Estamos entrando em contato em nome da Tend Branding para oferecer conteúdos relacionados a [Descrição do Serviço]. Caso você concorde em receber nossas mensagens via WhatsApp, por favor, responda com 'Aceito'. Você poderá cancelar o recebimento a qualquer momento enviando a palavra 'Cancelar'."</em></li>
+                </ul>
+            </li>
+            <li><strong>Armazenamento do Consentimento:</strong>
+                <ul>
+                    <li>O usuário é responsável por manter um registro do consentimento obtido, incluindo a data, horário e o conteúdo da mensagem de aceitação. Esse registro poderá ser solicitado em caso de auditoria ou denúncia.</li>
+                </ul>
+            </li>
+        </ul>
+
+        <h4>3.2 Responsabilidade pela Lista de Contatos:</h4>
+        <ul>
+            <li>O usuário é <strong>exclusivamente responsável</strong> pela origem, legalidade e veracidade dos dados dos contatos fornecidos.</li>
+            <li>É <strong>estritamente proibido</strong> utilizar listas de contatos adquiridas de terceiros ou coletadas sem consentimento explícito.</li>
+            <li>Em caso de violação das leis de proteção de dados ou das políticas da Meta, o usuário poderá ser responsabilizado civil e criminalmente.</li>
+        </ul>
+
+        <h4>3.3 Conteúdo das Mensagens:</h4>
+        <ul>
+            <li>O usuário é o único responsável pelo conteúdo enviado e concorda em não enviar mensagens que sejam:
+                <ul>
+                    <li>Spam ou mensagens não solicitadas;</li>
+                    <li>Ilegais, abusivas, ameaçadoras ou difamatórias;</li>
+                    <li>Que infrinjam direitos de propriedade intelectual;</li>
+                    <li>Que contenham vírus, malware ou códigos maliciosos.</li>
+                </ul>
+            </li>
+        </ul>
+
+        <hr>
+
+        <h2>4. Privacidade e Proteção de Dados</h2>
+        <h4>4.1 Armazenamento de Dados da Planilha:</h4>
+        <ul>
+            <li>Os dados fornecidos pelo usuário são armazenados temporariamente pelo período máximo de <strong>15 (quinze) dias</strong>, exclusivamente para fins de demonstração.</li>
+            <li>Após esse período, os dados são excluídos de forma automática, permanente e irreversível.</li>
+        </ul>
+
+        <h4>4.2 Solicitação de Exclusão Antecipada:</h4>
+        <ul>
+            <li>O usuário poderá solicitar a exclusão antecipada dos dados enviando um e-mail para <a href="mailto:tendbranding@gmail.com">tendbranding@gmail.com</a>.</li>
+            <li>A solicitação será atendida em até <strong>24 horas</strong> após o recebimento do e-mail.</li>
+            <li>A solicitação deverá incluir:
+                <ul>
+                    <li>Nome completo do usuário;</li>
+                    <li>Endereço de e-mail utilizado no cadastro;</li>
+                    <li>Data e hora do envio da planilha;</li>
+                    <li>Descrição dos dados a serem excluídos.</li>
+                </ul>
+            </li>
+        </ul>
+
+        <hr>
+
+        <h2>5. Propriedade Intelectual</h2>
+        <p>O Aplicativo, incluindo design, software, código-fonte e marcas registradas, é propriedade da <strong>Tend Branding</strong> ou de seus licenciadores.</p>
+        <ul>
+            <li>É proibido:
+                <ul>
+                    <li>Realizar engenharia reversa, descompilar ou modificar o código-fonte;</li>
+                    <li>Redistribuir ou comercializar o aplicativo sem autorização prévia;</li>
+                    <li>Utilizar o nome, marca ou logotipo da Tend Branding sem permissão expressa.</li>
+                </ul>
+            </li>
+        </ul>
+
+        <hr>
+
+        <h2>6. Isenção de Garantias e Limitação de Responsabilidade</h2>
+        <ul>
+            <li>O Aplicativo é fornecido "COMO ESTÁ". Não garantimos que o Aplicativo será ininterrupto, livre de erros ou seguro.</li>
+            <li>A <strong>Tend Branding</strong> não se responsabiliza por perdas ou danos decorrentes do uso do Aplicativo.</li>
+            <li>A <strong>Meta</strong> não é responsável pelo funcionamento deste Aplicativo e não o endossa.</li>
+        </ul>
+
+        <hr>
+
+        <h2>7. Consequências do Uso Indevido</h2>
+        <ul>
+            <li>O uso inadequado do Aplicativo poderá resultar em:
+                <ul>
+                    <li>Suspensão ou bloqueio do acesso ao Aplicativo;</li>
+                    <li>Sanções ou restrições pela <strong>Meta</strong>, incluindo o bloqueio da conta WhatsApp Business;</li>
+                    <li>Responsabilização legal por práticas abusivas, envio de mensagens não autorizadas ou coleta indevida de dados.</li>
+                </ul>
+            </li>
+        </ul>
+
+        <hr>
+
+        <h2>8. Indenização</h2>
+        <p>O usuário concorda em indenizar a <strong>Tend Branding</strong> por quaisquer perdas, danos ou custos decorrentes de:</p>
+        <ul>
+            <li>Uso inadequado do Aplicativo;</li>
+            <li>Violação destes Termos;</li>
+            <li>Violações das políticas da Meta ou das leis aplicáveis.</li>
+        </ul>
+
+        <hr>
+
+        <h2>9. Rescisão</h2>
+        <p>A <strong>Tend Branding</strong> reserva-se o direito de suspender ou encerrar o acesso ao Aplicativo a qualquer momento, sem aviso prévio, em caso de violação destes Termos.</p>
+
+        <hr>
+
+        <h2>10. Modificações nos Termos</h2>
+        <p>Os Termos poderão ser modificados a qualquer momento. Notificaremos o usuário via e-mail ou pela URL onde os Termos estão hospedados. A continuação do uso do Aplicativo após as revisões constituirá aceitação dos novos termos.</p>
+
+        <hr>
+
+        <h2>11. Lei Aplicável e Jurisdição</h2>
+        <p>Estes Termos serão regidos pelas leis da <strong>República Federativa do Brasil</strong>.</p>
+        <ul>
+            <li>O foro eleito para a resolução de disputas é a comarca de <strong>Campo Grande, Mato Grosso do Sul</strong>, com renúncia expressa a qualquer outro foro.</li>
+        </ul>
+
+        <hr>
+
+        <h2>12. Contato de Suporte</h2>
+        <p>Em caso de dúvidas ou solicitações:</p>
+        <ul>
+            <li>E-mail: <a href="mailto:raphaelbarbaguerrero@gmail.com">raphaelbarbaguerrero@gmail.com</a> ou <a href="mailto:tendbranding@gmail.com">tendbranding@gmail.com</a></li>
+        </ul>
+
+        <hr>
+
+        <h3>Links para as Políticas da Meta:</h3>
+        <ul>
+            <li><a href="https://www.whatsapp.com/legal/business-policy" target="_blank" rel="noopener noreferrer">Política do WhatsApp Business</a></li>
+            <li><a href="https://developers.facebook.com/terms/" target="_blank" rel="noopener noreferrer">Termos da Plataforma Meta</a></li>
+            <li><a href="https://www.facebook.com/policies/commerce" target="_blank" rel="noopener noreferrer">Política de Comércio da Meta</a></li>
+        </ul>
+
+        <hr>
+
+        <div class="warning">
+            <h3>Aviso Importante:</h3>
+            <p>O uso do TendBranding_WHA em desacordo com as políticas da Meta poderá resultar em bloqueio da conta, suspensão do acesso à API ou ações legais.</p>
+            <p>É responsabilidade do usuário garantir o <strong>consentimento explícito</strong> dos destinatários e seguir rigorosamente as políticas da Meta e a legislação aplicável.</p>
+        </div>
+    </div>
+</body>
+</html>
